--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Static Template</title>
   </head>
   <body>
-    <h1>This a static template, there is no bundler or bundling involved!</h1>
+    <h1>there is no bundler or bundling involved!</h1>
   </body>
+
+  <script src="js/login.service.js"></script>
+  <script src="js/login.controller.js"></script>
 </html>
