secret content css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="container">
-      <section class="login flex">
+      <section class="login flex hide">
         <h2>Login</h2>
         <form onsubmit="onLogin(this.value)">
           <input type="text" placeholder="Enter username" />
@@ -19,7 +19,7 @@
         </form>
       </section>
 
-      <section class="secret-content hide">
+      <section class="secret-content">
         <img src="./assets/images/secret-content.jpg" alt="" />
         <section class="actions-container flex">
           <button>Admin area</button>
