starting admin page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <h2 class="Welcome-user"></h2>
         <img src="./assets/images/secret-content.jpg" alt="" />
         <section class="actions-container flex">
-          <button class="admin-section">Admin area</button>
+          <button class="admin-section">
+            <a href="./admin.html">Admin</a>
+          </button>
           <button onclick="onLogout()">Logout</button>
         </section>
       </section>
