--- a/admin.html
+++ b/admin.html
@@ -28,6 +28,9 @@
 
     <button onclick="window.location.replace('/index.html')">Back</button>
 
+    <section class="user-msg">
+      <h4 class="msg-txt">user msg</h4>
+    </section>
     <script src="js/storage.service.js"></script>
     <script src="js/login.service.js"></script>
     <script src="js/admin.controller.js"></script>
