--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </section>
 
       <section class="secret-content hide">
-        <h2 class="Welcome-user"></h2>
+        <h2 class="welcome-user"></h2>
         <img src="./assets/images/secret-content.jpg" alt="" />
         <section class="actions-container flex">
           <button class="admin-section">
