clear form inputs

--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body onload="onInitAdmin()">
-    <h1>admin</h1>
+    <h1>Admin section</h1>
     <div class="display-actions-container flex">
       <button onclick="onChangeDisplay('cards')">
         <i class="fa-brands fa-buromobelexperte"></i>
