--- a/admin.html
+++ b/admin.html
@@ -13,6 +13,7 @@
     />
     <title>Admin section</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="./favicon-16x16.png" />
   </head>
   <body onload="onInitAdmin()">
     <h1>Admin section</h1>
